[tool.poetry]
name = "pg-gdb"
version = "0.1.0"
description = ""
authors = ["Renan A. Fonseca <renanfonseca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
types-gdb = "^15.0.0.20250308"
pyright = "^1.1.396"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
